// =====================================================================
//  NGHIEP VU A - NGUOI DUNG VA PHAN QUYEN
//  So do da rut gon, chi giu cac bang nghiep vu quan trong.
//  Cac bang duoc giu van dung field/khoa theo docs/database.dbml.
// =====================================================================

Table users {
  id int [pk, increment]
  username varchar(255) [not null, unique]
  fullname varchar(255) [not null]
  phone_number varchar(255)
  avatar_url varchar(255)
  address varchar(255)
  email varchar(255) [not null, unique]
  password varchar(255) [not null]
  failed_login_attempts int [not null, default: 0]
  last_failed_login_at datetime
  is_active boolean [default: 1]
  role_id int
  class_id int
  major_id int
  created_by_user_id int
  modified_by_user_id int
  deleted_by_user_id int
  created_at datetime [not null, default: `now()`]
  updated_at datetime [not null, default: `now()`]
  deleted_at datetime
}

Table roles {
  id int [pk, increment]
  name varchar(255) [not null, unique]
  code varchar(255) [not null, unique]
  description varchar(255)
  created_by_user_id int
  modified_by_user_id int
  deleted_by_user_id int
  created_at datetime [not null, default: `now()`]
  updated_at datetime [not null, default: `now()`]
  deleted_at datetime
}

Table permissions {
  id int [pk, increment]
  name varchar(255) [not null, unique]
  code varchar(255) [not null, unique]
  description varchar(255)
  created_by_user_id int
  modified_by_user_id int
  deleted_by_user_id int
  created_at datetime [not null, default: `now()`]
  updated_at datetime [not null, default: `now()`]
  deleted_at datetime
}

Table role_permission {
  role_id int [not null]
  permission_id int [not null]

  indexes {
    (role_id, permission_id) [pk]
  }
}

// Relationships shown in this diagram.
Ref: users.role_id > roles.id [delete: set null]
Ref: users.created_by_user_id > users.id [delete: set null]
Ref: users.modified_by_user_id > users.id [delete: set null]
Ref: users.deleted_by_user_id > users.id [delete: set null]
Ref: roles.created_by_user_id > users.id [delete: set null]
Ref: roles.modified_by_user_id > users.id [delete: set null]
Ref: roles.deleted_by_user_id > users.id [delete: set null]
Ref: permissions.created_by_user_id > users.id [delete: set null]
Ref: permissions.modified_by_user_id > users.id [delete: set null]
Ref: permissions.deleted_by_user_id > users.id [delete: set null]
Ref: role_permission.role_id > roles.id [delete: cascade]
Ref: role_permission.permission_id > permissions.id [delete: cascade]

// Da luoc bo majors, classes, students va advisor_requests de so do RBAC gon hon.
// users.class_id va users.major_id van la field that trong DB, nhung quan he toi classes/majors khong ve o so do rut gon nay.
